--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,15 @@ body {
   line-height: 24px;
   color: black;
   background: white;
+  align-items: center;
+
+  max-width: 1200px;
+  margin: auto;
+
 }
+
+
+
 
 .navigation-link {
   font-family: "PT Sans", sans-serif;
@@ -39,7 +47,7 @@ body {
 .background-index {
   background-image: url("../image/index-background.jpg");
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: 1200 485;
 
   align-items: center;
   background-position: center;
@@ -49,7 +57,7 @@ body {
 .welcome-center {
     text-align: center;
     background-image: url("../image/divider.png");
-    background-size: 100% auto;
+    background-size: 1200 auto;
     background-position: bottom;
     background-repeat: no-repeat;
     padding-bottom: 82px;
@@ -60,4 +68,213 @@ body {
 .shadow-box {
 
   box-shadow: -2px -2px 4px rgba(61, 105, 16, 0.5);
+  background-position: center;
+
+
+}
+
+
+.name-box {
+
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 22px;
+  text-transform: uppercase;
+  text-align: center;
+  padding-top: 69px;
+  padding-left: 290px;
+  padding-right: 290px;
+  padding-bottom: 25px;
+
+}
+
+.name-p {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 21px;
+  text-align: center;
+}
+
+
+.header-advantages-items {
+
+  background-size: 400 385;
+  background-color: #82b3d3;
+}
+
+
+.header-advantages-img {
+  background-color: #82b3d3;
+  text-align: right;
+
+}
+
+.header-name-line {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 117%;
+    text-transform: uppercase;
+    text-align: center;
+
+  }
+
+.name-p-line {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 117%;
+  text-align: center;
+
+}
+
+.name-box-items {
+  background-color: #82b3d3;
+  color: white;
+  text-transform: uppercase;
+    text-align: center;
+
+}
+
+.header-name-p {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 22px;
+  text-transform: uppercase;
+  text-align: center;
+
+}
+
+.header-name-under-p {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 20px;
+  text-align: center;
+
+}
+
+.header-description {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-align: center;
+
+
+}
+
+
+.header-description-underp{
+font-weight: 400;
+font-size: 18px;
+line-height: 117%;
+text-align: center;
+
+}
+
+
+.header-description-list {
+  text-align: center;
+
+
+}
+
+
+.question-p {
+font-weight: 700;
+font-size: 30px;
+line-height: 22px;
+text-transform: uppercase;
+text-align: center;
+
+
+}
+
+
+.question-p-under {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 20px;
+  text-align: center;
+}
+
+
+.question-button {
+  border-radius: 4px;
+  width: 376px;
+  height: 52px;
+  background-position: center;
+  text-align: center;
+  margin-left: 412px;
+  margin-right: 412px;
+
+}
+
+
+.text-button {
+  background-color: #756157;
+  color: white;
+  text-align: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 180%;
+  text-transform: uppercase;
+
+}
+
+
+.newsletter  {
+  background-image: url("../image/Subscribe.jpg");
+  width: 1200px;
+
+}
+
+.newsletter-p {
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: white;
+  text-align: center;
+  padding-top: 96px;
+
+}
+
+.newsletter-p-under {
+
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 118%;
+  text-align: center;
+  color: white;
+
+}
+
+.email-input {
+  text-align: center;
+  margin-bottom: 104px;
+
+
+
+}
+
+.submit-button {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #82b3d3;
+  color: white;
+}
+
+.tel-a  a {
+  font-weight: 400px;
+  font-size: 40px;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+  color: black;
+
 }
